--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav ul li a:hover {
 }
 
 .card {
-  max-width: 300vh;
+  width: 80vw;
   margin: 12px auto;
 }
 .cards {
@@ -140,6 +140,9 @@ nav ul li a:hover {
 
 .card h2 {
   font-family: "Lato", sans-serif;
+}
+.container {
+  max-width: 100vw;
 }
 
 .container {
